--- a/.github/workflows/bestpractice.yaml
+++ b/.github/workflows/bestpractice.yaml
@@ -83,10 +83,10 @@
                 - name: Configure AWS credentials
                   uses: aws-actions/configure-aws-credentials@v4
                   with:
-                   # role-to-assume: arn:aws:iam::897722687643:role/github_actions
+                    role-to-assume: ${{ secrets.AWS_OIDC_ROLE_ARN }}
                     aws-region: us-east-1
-                    aws-access-key-id: ${{ secrets.ACCESS_KEY }}
-                    aws-secret-access-key: ${{ secrets.SECRET_KEY }}
+                    # aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+                    # aws-secret-access-key: ${{ secrets.SECRET_KEY }}
 
                 - name: Setup Terraform
                   uses: hashicorp/setup-terraform@v3
